# metal_playground

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  makefile
examples/dotprod/: main.rs
examples/dotprod/metal/: dotprod.metal  dotprod.metallib
examples/fp/: main.rs
examples/fp/metal/: fp.h.metal  fp_ops.metal  fp_ops.metallib
examples/matrixprod/: README.md  main.rs  matrix.rs
examples/matrixprod/metal/: matrix_multiplication.metal  matrix_multiplication.metallib  matrixprod.metal  matrixprod.metallib
examples/memory/: alloc.rs  main.rs
examples/memory/metal/: memory.metal  memory.metallib
src/: lib.rs  main.rs  utils.rs
src/dotprod/: mod.rs
src/dotprod/metal/: dot_product.metal
src/metal/: dot_product.metal  dot_product.metallib
