[package]
name = "metal-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "dotprod"

[dependencies]
libc = "0.2.139"
metal = { git = "https://github.com/gfx-rs/metal-rs" }
once_cell = "1.17.1"
